[package]
description = "A Rust WebAssembly library that provides seamless integration between Node.js's IncomingMessage and Rust's hyper::Request"
edition = "2021"
exclude = ["example/*"]
homepage = "https://github.com/forgen-org/wasm-http-hyper"
license = "MIT"
name = "wasm-http-hyper"
readme = "README.md"
repository = "https://github.com/forgen-org/wasm-http-hyper"
version = "0.2.0"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["json"], optional = true }
bytes = "1.10.0"
futures = "0.3.31"
futures-util = "0.3.31"
gloo-utils = "0.2"
http-body-util = "0.1"
hyper = "1.6"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
console_error_panic_hook = "0.1.7"
serde_json = "1.0.138"
tower = "0.5.2"
wasm-bindgen-test = "0.3.50"

[features]
axum = ["dep:axum"]

